# temp

./: .gitignore  Dockerfile  README.md  build.sh  credentials  landmark.py  main.py  out.txt  pyproject.toml  run.sh
images/head_angle_test/: notas.txt
landmarkColorToBlack/: colorToBlack.py
planning_for_less_trivial_game/: angle_automata.txt  angle_automata_v2.txt  angle_automata_v3.txt  automata.txt  game.py  goal.py  log.out  module_angle.py  module_position.py  plan.lts  planner_automata.py  planner_util_sharedmem.py  player.py  pyproject.toml  sensing_angle.py  sensing_position.py
planning_for_trivial_game/: game.py  goal.py  module_position.py  planner_automata.py  planner_util_sharedmem.py  player.py  sensing_position.py
simple_mission/: leds_controller.py  locator_and_mapper.py  module_leds.py  planner_automata.py  sensing_position.py  simple_automata.lts  simple_automata.txt  simple_mission.py  simpler_automata.lts
workspace/: nao.properties
workspace/automata/: planner_automata.py
workspace/blinking_leds_mission/: blinking_leds_automata.lts  blinking_leds_automata.txt  blinking_leds_mission.py  module_leds.py  planner_automata.py  sensing_trivial.py  sharedmem.py
workspace/cli/: main.py
workspace/location/: locator_and_mapper.py  qr_detector.py
workspace/maps/: map.py  qr_position.py  square_map.json
workspace/mock/: movement_daemon.py  nao_mock.py
workspace/movement_with_keyboard/: main.py
workspace/naoqi_custom/: awareness_controller.py  head_controller.py  leds_controller.py  movement_controller.py  photo_controller.py  (+3 more)
(+32 files in other folders)
