[tool.poetry]
name = "naoqi"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Miceli <micelijuanpablo@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "2.7.18"
opencv-python = "^4.8.0.76"
pyzbar = "^0.1.9"
pandas = "0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
